26 Dec 2004 mipsator
 * added snprintf_b(), strlcat_b() and strlcpy_b() in pmk_string.c.
 * added support for AMD cpu feature detection.
 * replaced some snprintf(), strlcat() and strlcpy() with their boolean
   counterparts.

25 Dec 2004 mipsator
 * fixed respect of CC in pmkcfg.sh script.
 * added DEFS usage in pmkfile.5.
 * updated pmkfile.
 * improved pmkcfg.sh to provide full path in check_binary().
 * updated pmk.conf.5 to reflect latest changes.
 * more warning fixes in compat found with aggressive compiler options.

23 Dec 2004 mipsator
 * fixed use of the assembler to comply with SunOS.

22 Dec 2004 mipsator
 * fixed a lot of compiler warnings (almost all about comparison between
   signed and unsigned) that were revealed with 'aggressive' options.

20 Dec 2004 mipsator
 * reworked CHECK_LIB in the same spirit as CHECK_HEADER.
 * replaced remaining copy_text_file() by fcopy().
 * removed copy_text_file() from common object as it is useless now.

19 Dec 2004 mipsator
 * added c_file_builder() to reduce redundant code.
 * added MACRO option in CHECK_HEADER to detect compiler macros in headers.
 * removed copy_config() from pmksetup and use fcopy() instead.

11 Dec 2004 mipsator
 * added detection of 'id' and 'sudo' in pmksetup, idea from Sean Chittenden.

06 Dec 2004 mipsator
 * added detection of 'ls' and 'echo' in pmksetup.

27 Nov 2004 mipsator
 * added cpu features for x86 architecture.

# snapshot 0.8.1-s9

27 Nov 2004 mipsator
 * incorporated x86 cpu detection code into pmksetup, enjoy !
 * miscellaneous cosmetics changes.

26 Nov 2004 mipsator
 * made cpuid_test using compat.
 * done major clean-up in tests directory (but still need some work).
 * fixed a bug in x86_get_cpuid_data() that was remaining from before
   x86_cpu_cell structure changes.

25 Nov 2004 mipsator
 * added missing code that translate arch name into id.
 * improved architecture detection code.

24 Nov 2004 mipsator
 * x86 cpu detection engine is complete, need more data now.
